# C_Board_Framework

./: .mxproject  CMakeLists.txt  CMakePresets.json  C_Board_Framework_Old.ioc  README.md
Core/Inc/: main.h  stm32f4xx_it.h  tim.h  usart.h
Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
Middlewares/SEGGER_RTT/: CMakeLists.txt
Middlewares/SEGGER_RTT/Config/: SEGGER_RTT_Conf.h
Middlewares/SEGGER_RTT/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
USB_DEVICE/App/: usbd_cdc_if.c
User/: CMakeLists.txt
User/Algorithm/: Bottom.c  CRC_DJI.c  Power_Ctrl.c  QuaternionEKF.c  RUI_MATH.c  controller.c  mahony_filter.c  slidingmodec.c  user_lib.c
User/Algorithm/inc/: Bottom.h  Power_Ctrl.h  QuaternionEKF.h  RUI_MATH.h  controller.h  mahony_filter.h  slidingmodec.h
User/App/: Chassis_Task.c  Gimbal_Task.c  IMU_Task.c  RUI_ROOT_INIT.c  Robot.c  RobotUI_Ctrl.c  bord_transmit.c
User/App/inc/: Chassis_Task.h  Gimbal_Task.h  IMU_Task.h  RUI_ROOT_INIT.h  Robot.h  RobotUI_Ctrl.h  Shoot_Task.h  board_config.h  bord_transmit.h
User/Bsp/: BMI088Middleware.c  BMI088driver.c  CANSPI.c  DBUS.c  DJI_Motor.c  DM_Motor.c  MCP2515.c  NIMING.c  Power_CAP.c  RGBctrl.c  Referee.c  VOFA.c  VT13.c  Vision.c  bsp_dwt.c  bsp_imu_pwm.c  can_bsp.c  music.c
User/Bsp/inc/: BMI088Middleware.h  BMI088driver.h  CANSPI.h  DBUS.h  DJI_Motor.h  DM_Motor.h  MCP2515.h  Power_CAP.h  RGBctrl.h  Referee.h  VOFA.h  VT13.h  Vision.h  bsp_dwt.h  can_bsp.h  music.h
User/Start/: All_Init.c  WHW_IRQN.c
User/Start/Inc/: All_Init.h  MY_Define.h  Motors.h  WHW_IRQN.h  log.h
cmake/stm32cubemx/: CMakeLists.txt
